# sphinx-document-repository

./: README.md  pyproject.toml
source/: conf.py  index.rst
