[tool.poetry]
name = "sphinx-document-repository"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.2.0"
sphinx-shiguredo-theme = {git = "https://github.com/shiguredo/sphinx_shiguredo_theme.git", rev = "develop"}
furo = "^2021.10.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
